fix: alinear InteropCvlMasivoNifDAO y service con convenciones del proyecto
- InteropCvlMasivoNifDAO: resolver nombre de tabla y secuencia desde
  MELANBIDE_INTEROP.properties via ConfigurationParameter y
  ConstantesMeLanbideInterop en lugar de strings hardcodeados
- InteropCvlMasivoNifDAO: añadir volatile al campo singleton para
  garantizar seguridad en entornos multihilo
- InteropCvlMasivoNifDAO: sustituir new Long() deprecado por Long.valueOf()
- InteropCvlMasivoCsvService: resolver nombre de tabla INTEROP_VIDALABORAL
  desde properties en lugar de string hardcodeado
- InteropCvlMasivoCsvService: sustituir new Integer() deprecado por
  Integer.valueOf()

Agent-Logs-Url: https://github.com/GerardoPerezArenas/holalal/sessions/4ba6daa2-c5d6-45af-939c-554e9ef17e42

Co-authored-by: GerardoPerezArenas <73581201+GerardoPerezArenas@users.noreply.github.com>